@@ -98,7 +98,7 @@ void flext_obj::DefineHelp(t_classid c,const char *ref,const char *dir,bool addt
 
 bool flext_obj::GetParamSym(t_atom &dst,const t_symbol *sym,t_canvas *c)
 {
-#if FLEXT_SYS == FLEXT_SYS_PD
+#if FLEXT_SYS == FLEXT_SYS_PD && defined(PD_MINOR_VERSION) && PD_MINOR_VERSION >= 37
     if(!c) c = canvas_getcurrent();
 
     const char *s = GetString(sym);
